--- a/di-16-zhang-fu-wu-qi/16.3-gitlab-ee.md
+++ b/di-16-zhang-fu-wu-qi/16.3-gitlab-ee.md
@@ -352,7 +352,17 @@ OK
 OK
 == ee/db/fixtures/production/041_create_ai_settings.rb took 0.02 seconds
 == Seeding took 2.20 seconds
+```
+
+改变权限：
+
+```sh
 root@ykla:/usr/local/www/gitlab # chown root /usr/local/share/gitlab-shell
+```
+
+编译资源：
+
+```sh
 root@ykla:/usr/local/www/gitlab # su -l git -c "cd /usr/local/www/gitlab && rake gitlab:env:info RAILS_ENV=production"
 
 System information
@@ -439,69 +449,9 @@ $ node ./scripts/frontend/preinstall.mjs
 [2/5] Resolving packages...
 [3/5] Fetching packages...
 [4/5] Linking dependencies...
-warning " > @gitlab/duo-ui@6.0.0" has incorrect peer dependency "@gitlab/ui@^105.0.0".
-warning " > @gitlab/duo-ui@6.0.0" has unmet peer dependency "bootstrap@>=4.5.3 <=4.6.2".
-warning " > @gitlab/vue-router-vue3@4.1.6" has incorrect peer dependency "vue@^3.2.0".
-warning " > @gitlab/vuex-vue3@4.0.0" has incorrect peer dependency "vue@^3.0.2".
-warning " > @vue/apollo-components@4.0.0-beta.4" has incorrect peer dependency "vue@^3.1.0".
-warning " > @vue/apollo-option@4.0.0-beta.4" has incorrect peer dependency "vue@^3.1.0".
-warning "graphiql > @graphiql/react > codemirror-graphql@2.1.1" has unmet peer dependency "@codemirror/language@6.0.0".
-warning " > @gitlab/eslint-plugin@20.6.0" has incorrect peer dependency "eslint@^8.57.0".
-warning "@gitlab/eslint-plugin > @typescript-eslint/eslint-plugin@7.16.0" has unmet peer dependency "@typescript-eslint/parser@^7.0.0".
-warning "@gitlab/eslint-plugin > @typescript-eslint/eslint-plugin@7.16.0" has incorrect peer dependency "eslint@^8.56.0".
-warning "@gitlab/eslint-plugin > eslint-config-airbnb-base@15.0.0" has incorrect peer dependency "eslint@^7.32.0 || ^8.2.0".
-warning "@gitlab/eslint-plugin > @typescript-eslint/eslint-plugin > @typescript-eslint/type-utils@7.16.0" hasincorrect peer dependency "eslint@^8.56.0".
-warning "@gitlab/eslint-plugin > @typescript-eslint/eslint-plugin > @typescript-eslint/utils@7.16.0" has incorrect peer dependency "eslint@^8.56.0".
-warning "@gitlab/eslint-plugin > @typescript-eslint/eslint-plugin > ts-api-utils@1.3.0" has unmet peer dependency "typescript@>=4.2.0".
-warning " > @vue/compat@3.5.13" has incorrect peer dependency "vue@3.5.13".
-warning " > @vue/test-utils-vue3@2.3.1" has unmet peer dependency "@vue/compiler-dom@^3.0.1".
-warning " > @vue/test-utils-vue3@2.3.1" has unmet peer dependency "@vue/server-renderer@^3.0.1".
-warning " > @vue/test-utils-vue3@2.3.1" has incorrect peer dependency "vue@^3.0.1".
-warning "@vue/test-utils-vue3 > @vue/server-renderer@3.2.47" has incorrect peer dependency "vue@3.2.47".
-warning " > @vue/vue2-jest@28.1.0" has incorrect peer dependency "babel-jest@>= 28 < 29".
-warning " > @vue/vue2-jest@28.1.0" has incorrect peer dependency "jest@28.x".
-warning " > @vue/vue3-jest@29.2.3" has incorrect peer dependency "vue@^3.0.0-0".
-warning "swagger-cli > @apidevtools/swagger-cli > @apidevtools/swagger-parser@10.1.0" has unmet peer dependency "openapi-types@>=7".
-warning Workspaces can only be enabled in private projects.
-[5/5] Building fresh packages...
-[7/8] ⠄ tree-sitter-json
-[2/8] ⠄ @gitlab/web-ide
-[7/8] ⡀ tree-sitter-json
-[-/8] ⡀ waiting...
-[3/8] ⡀ canvas[6/8] ⡀ tree-sitter
-[7/8] ⠠ tree-sitter-json[-/8] ⠠ waiting...
-[3/8] ⠠ canvas
-[6/8] ⠠ tree-sitter
-warning Error running install script for optional dependency: "/usr/local/www/gitlab/node_modules/canvas: Command failed.
-Exit code: 1
-Command: node-pre-gyp install --fallback-to-build --update-binary
-Arguments:
-Directory: /usr/local/www/gitlab/node_modules/canvas
-Output:
-node-pre-gyp info it worked if it ends with ok
-node-pre-gyp info using node-pre-gyp@1.0.11
-node-pre-gyp info using node@22.14.0 | freebsd | x64
-node-pre-gyp ERR! build error
-node-pre-gyp ERR! stack Error: Failed to execute 'node-gyp clean' (Error: spawn node-gyp ENOENT)
-node-pre-gyp ERR! stack     at ChildProcess.<anonymous> (/usr/local/www/gitlab/node_modules/@mapbox/node-pre-gyp/lib/util/compile.js:83:23)
-node-pre-gyp ERR! stack     at ChildProcess.emit (node:events:518:28)
-node-pre-gyp ERR! stack     at ChildProcess._handle.onexit (node:internal/child_process:291:12)
-node-pre-gyp ERR! stack     at onErrorNT (node:internal/child_process:483:16)
-node-pre-gyp ERR! stack     at process.processTicksAndRejections (node:internal/process/task_queues:90:21)
-node-pre-gyp ERR! System FreeBSD 14.2-RELEASE
-node-pre-gyp ERR! command \"/usr/local/bin/node\" \"/usr/local/www/gitlab/node_modules/canvas/node_modules/.bin/node-pre-gyp\" \"install\" \"--fallback-to-build\" \"--update-binary\"
-node-pre-gyp ERR! cwd /usr/local/www/gitlab/node_modules/canvas
-node-pre-gyp ERR! node -v v22.14.0
-[7/8] ⠐ tree-sitter-json
-[-/8] ⠐ waiting...
-[3/8] ⠐ canvas
-[6/8] ⠐ tree-sitter
-warning Error running install script for optional dependency: "/usr/local/www/gitlab/node_modules/tree-sitter: Command failed.
-Exit code: 127
-Command: prebuild-install || node-gyp rebuild
-Arguments:
-Directory: /usr/local/www/gitlab/node_modules/tree-sitter
-Output:
+
+……省略一部分……
+
 [7/8] ⠈ tree-sitter-json[7/8] ⠠ tree-sitter-json
 [7/8] ⠠ tree-sitter-json
 [-/8] ⠠ waiting...
@@ -822,28 +772,7 @@ Exported license:
 eyJkYXRhIjoiZlhQdzNWWldFOTIrcHFrNUx1MlZqQXBaZkpQVi9yaHJxN0cy
 T2pVK3dYZGk4dllHM1JTblR3S2N2YTYyXG5LTTJFVmlpMU1iZTZaaHFmOTJu
 ZGRucTlpbHdRZ05OODZINkV2NCttbWx1bW95UnYyYVhtSjhPSkZjRzVcbjll
-SXU1dWdJcU1jUkliQ1pNSUJ6U2cvWlJvV1dDbm9pc0E5RGxrMkk2MS9zS0Vx
-dHBQc05WTDZ4V3N4MFxuL0Z6WVRTZFZkYUJjYURXRGhodHJkVm53SWZWcFBN
-OS9kcU1Cb2V2OHZ1MHA0VmRXKzNMMkJWMkxTK0NaXG41eTlaVDRlV0dUWGNE
-SFJXNC8vZWhpUC9hQnhqWitBdHVkc2lkNE40aVdqcVpwYnNXSmE5WmpEUVpk
-OFFcbit2TitZU0N2ZUFoMDFTZHBFVUQyL01ITm5lWWlOM1A2aDlSRjdOWS80
-NjFEQXM0ZitxOEFEY3pVR2dNZlxud0pCTUViNnZldGtRK3VmRXJLQU1Ldlp3
-MmRMWWMzcWhhbll2Z1dzaDAzSlAvYUxrWkxTN0VOTmpoUnZuXG5CUFJzdENa
-K1UreU95K0dyRGszeXI0RVFBK2hraDI3ZWNaVmRyb0FaVisxWGJSTXlsYW1y
-ZnVZTXNQdzZcblBzY2NMRk5vaDRKTkFvSEtFZHI1UG5uQWs2djR3QU5XQVYv
-TDJkdjE5V1pnOVpGd0NaNjlYaTJ1M1R3dlxuNTUxUjFHZXUrV3pWaFB5V28z
-YXNDeHRBNnhRakhONjRTRmZZejhLdjRFUzdMMkgyU1FiSDN4eTV1dTVYXG5F
-c0tXMGRQZTRCcUxWTzZGT1ROWVJINzViSEVqWk90NHNvaWp1VHpLWW1YdU5s
-MjkyZlRndzgvVnZwQU9cbjFoZnQ0Ymh5WmlUZ2t3RVFNMnFBQUdOaUJ5THU5
-ZUVoTUhzdWQ1NUNrUWp6bHZLc1lXV1FIWENVdDBjQ1xuRlBuSHd4Nm9HNWxU
-dzlTVUFzS015YVloaWk0WGhGR3VYSXErSy9OMStCaXlQL3pnVVNsbEhrS2da
-cisyXG5ZQVBvZm5mVVZ3PT1cbiIsImtleSI6IkF5Sy9WQnROYTcxV3lyWFV0
-dkRwZVFyaVh3Y3JtYXB3T0tIejNwMkpoK3REYjZnNm0veHgzbStSVWFpL1xu
-ZWliUnJhNkZLc0dCSitvczBpelltcUJDVjRRZEFBbHhBTFczeW5rSTh2M00r
-TFRwQzViNTNzN2ZoOXdkXG4weXFYUDk3djNpTS9KcXNGWGpzQTZ1cWtFRFRs
-eWxQSnpVbS9sRWtZNG1ZT1VzS09YSVU2cithbWFnRDRcblRZR1MvTVI5L3Mz
-eXlQblY0My96SlZmazZWdWtiY1NIRXFGbnhCYnoxMitBWE9NQ2U4WTM0RGV5
-eGxXL1xuQkxDN2R0cHcvRGlLSXFQM3BpWnNJOEQ4dVdVUGVmNFpvaS9xZTJm
+……省略一部分……
 Q2hNd0ViZFJCNFlpK3R2M1dYMS9LXG4xendIMEVNWFJhT3dPN1BUaDd2Mngx
 NVhvSTNxZTN3STFjNTFyOUFJeGc9PVxuIiwiaXYiOiIzcDByN01MelpSck10
 K2YwbWhobEpRPT1cbiJ9
@@ -881,28 +810,7 @@ root@ykla:~/gitlab-license # cat GitLabBV.gitlab-license
 eyJkYXRhIjoiZlhQdzNWWldFOTIrcHFrNUx1MlZqQXBaZkpQVi9yaHJxN0cy
 T2pVK3dYZGk4dllHM1JTblR3S2N2YTYyXG5LTTJFVmlpMU1iZTZaaHFmOTJu
 ZGRucTlpbHdRZ05OODZINkV2NCttbWx1bW95UnYyYVhtSjhPSkZjRzVcbjll
-SXU1dWdJcU1jUkliQ1pNSUJ6U2cvWlJvV1dDbm9pc0E5RGxrMkk2MS9zS0Vx
-dHBQc05WTDZ4V3N4MFxuL0Z6WVRTZFZkYUJjYURXRGhodHJkVm53SWZWcFBN
-OS9kcU1Cb2V2OHZ1MHA0VmRXKzNMMkJWMkxTK0NaXG41eTlaVDRlV0dUWGNE
-SFJXNC8vZWhpUC9hQnhqWitBdHVkc2lkNE40aVdqcVpwYnNXSmE5WmpEUVpk
-OFFcbit2TitZU0N2ZUFoMDFTZHBFVUQyL01ITm5lWWlOM1A2aDlSRjdOWS80
-NjFEQXM0ZitxOEFEY3pVR2dNZlxud0pCTUViNnZldGtRK3VmRXJLQU1Ldlp3
-MmRMWWMzcWhhbll2Z1dzaDAzSlAvYUxrWkxTN0VOTmpoUnZuXG5CUFJzdENa
-K1UreU95K0dyRGszeXI0RVFBK2hraDI3ZWNaVmRyb0FaVisxWGJSTXlsYW1y
-ZnVZTXNQdzZcblBzY2NMRk5vaDRKTkFvSEtFZHI1UG5uQWs2djR3QU5XQVYv
-TDJkdjE5V1pnOVpGd0NaNjlYaTJ1M1R3dlxuNTUxUjFHZXUrV3pWaFB5V28z
-YXNDeHRBNnhRakhONjRTRmZZejhLdjRFUzdMMkgyU1FiSDN4eTV1dTVYXG5F
-c0tXMGRQZTRCcUxWTzZGT1ROWVJINzViSEVqWk90NHNvaWp1VHpLWW1YdU5s
-MjkyZlRndzgvVnZwQU9cbjFoZnQ0Ymh5WmlUZ2t3RVFNMnFBQUdOaUJ5THU5
-ZUVoTUhzdWQ1NUNrUWp6bHZLc1lXV1FIWENVdDBjQ1xuRlBuSHd4Nm9HNWxU
-dzlTVUFzS015YVloaWk0WGhGR3VYSXErSy9OMStCaXlQL3pnVVNsbEhrS2da
-cisyXG5ZQVBvZm5mVVZ3PT1cbiIsImtleSI6IkF5Sy9WQnROYTcxV3lyWFV0
-dkRwZVFyaVh3Y3JtYXB3T0tIejNwMkpoK3REYjZnNm0veHgzbStSVWFpL1xu
-ZWliUnJhNkZLc0dCSitvczBpelltcUJDVjRRZEFBbHhBTFczeW5rSTh2M00r
-TFRwQzViNTNzN2ZoOXdkXG4weXFYUDk3djNpTS9KcXNGWGpzQTZ1cWtFRFRs
-eWxQSnpVbS9sRWtZNG1ZT1VzS09YSVU2cithbWFnRDRcblRZR1MvTVI5L3Mz
-eXlQblY0My96SlZmazZWdWtiY1NIRXFGbnhCYnoxMitBWE9NQ2U4WTM0RGV5
-eGxXL1xuQkxDN2R0cHcvRGlLSXFQM3BpWnNJOEQ4dVdVUGVmNFpvaS9xZTJm
+……省略一部分……
 Q2hNd0ViZFJCNFlpK3R2M1dYMS9LXG4xendIMEVNWFJhT3dPN1BUaDd2Mngx
 NVhvSTNxZTN3STFjNTFyOUFJeGc9PVxuIiwiaXYiOiIzcDByN01MelpSck10
 K2YwbWhobEpRPT1cbiJ9
@@ -967,7 +875,6 @@ GitLab and all its components are up and running.
 # dmesg
 
 ……省略……
-
 
 swap_pager: out of swap space
 swp_pager_getswapspace(11): failed
