--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -131,130 +131,84 @@ flush privileges;
 完整示例：
 
 ```ini
-
 ##############################################
 #                                            #
-# Sample Pure-FTPd Mysql configuration file. #
-# See README.MySQL for explanations.         #
+# 示例 Pure-FTPd 的 MySQL 配置文件。         #
+# 详细说明请参阅 README.MySQL。              #
 #                                            #
 ##############################################
-
 
 # MYSQLServer 数据库服务器地址
-
 MYSQLServer     127.0.0.1
 
-
 # MYSQLServer 数据库服务器端口
-
 MYSQLPort       3306
 
-
-# Optional : define the location of mysql.sock if the server runs on this host.
-
+# 可选：如果数据库服务器运行在本机，指定 mysql.sock 的路径。
 MYSQLSocket     /var/run/mysqld/mysqld.sock
 
-
 # 数据库用户名
-
 MYSQLUser       pftp
 
-
 # 数据库密码
-
 MYSQLPassword   abc123
 
-
 # 数据库名
-
 MYSQLDatabase   pureftpd
 
-
-# 加密方式（此处为明文）
-# Valid values are : "cleartext", "argon2", "scrypt", "crypt", and "any"
-
+# 密码加密方式（此处为明文）
+# 有效值包括："cleartext"（明文）、"argon2"、"scrypt"、"crypt" 和 "any"
 MYSQLCrypt      cleartext
 
-
-# In the following directives, parts of the strings are replaced at
-# run-time before performing queries :
+# 以下设置中的字符串部分在运行时会被替换：
 #
-# \L is replaced by the login of the user trying to authenticate.
-# \I is replaced by the IP address the user connected to.
-# \P is replaced by the port number the user connected to.
-# \R is replaced by the IP address the user connected from.
-# \D is replaced by the remote IP address, as a long decimal number.
+# \L 会被替换为尝试认证的用户名。
+# \I 会被替换为用户连接到的 IP 地址。
+# \P 会被替换为用户连接到的端口号。
+# \R 会被替换为用户来源的 IP 地址。
+# \D 会被替换为远程 IP 地址的长整数形式。
 #
-# Very complex queries can be performed using these substitution strings,
-# especially for virtual hosting.
+# 使用这些替换字符串可以执行非常复杂的查询，特别适用于虚拟主机设置。
 
-# Query to execute in order to fetch the password
-
+# 用于获取密码的 SQL 查询语句
 MYSQLGetPW      SELECT Password FROM users WHERE User='\L'
 
-
-# Query to execute in order to fetch the system user name or uid
+# 用于获取系统用户名或 UID 的 SQL 查询语句
 MYSQLGetUID     SELECT Uid FROM users WHERE User='\L'
 
-
-# 默认 UID - if set this overrides MYSQLGetUID
-
+# 默认 UID - 设置后将覆盖 MYSQLGetUID 的查询结果
 MYSQLDefaultUID 2000
 
-
-# Query to execute in order to fetch the system user group or gid
-
+# 用于获取系统用户组名或 GID 的 SQL 查询语句
 MYSQLGetGID     SELECT Gid FROM users WHERE User='\L'
 
-
-# 默认 GID - if set this overrides MYSQLGetGID
-
+# 默认 GID - 设置后将覆盖 MYSQLGetGID 的查询结果
 MYSQLDefaultGID 2000
 
-
-# Query to execute in order to fetch the home directory
-
+# 用于获取用户主目录的 SQL 查询语句
 MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 
-
-# Optional : query to get the maximal number of files 
-# Pure-FTPd must have been compiled with virtual quotas support.
-
+# 可选：用于获取最大文件数的查询（虚拟配额支持需开启）
 MySQLGetQTAFS  SELECT QuotaFiles FROM users WHERE User='\L'
 
-
-# Optional : query to get the maximal disk usage (virtual quotas)
-# The number should be in Megabytes.
-# Pure-FTPd must have been compiled with virtual quotas support.
-
+# 可选：用于获取最大磁盘使用量（单位为 MB，需要虚拟配额支持）
 MySQLGetQTASZ  SELECT QuotaSize FROM users WHERE User='\L'
 
-
-# Optional : ratios. The server has to be compiled with ratio support.
-
+# 可选：上传/下载比率，服务器需支持比率功能
 MySQLGetRatioUL SELECT ULRatio FROM users WHERE User='\L'
 MySQLGetRatioDL SELECT DLRatio FROM users WHERE User='\L'
 
-
-# Optional : bandwidth throttling.
-# The server has to be compiled with throttling support.
-# Values are in KB/s .
-
+# 可选：带宽限制，单位为 KB/s，服务器需支持带宽限制功能
 MySQLGetBandwidthUL SELECT ULBandwidth FROM users WHERE User='\L'
 MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 
-
-# Enable ~ expansion. NEVER ENABLE THIS BLINDLY UNLESS :
-# 1) You know what you are doing.
-# 2) Real and virtual users match.
-
+# 启用 ~ 路径扩展。**切勿盲目启用，除非满足以下条件：**
+# 1) 你明确知道自己在做什么。
+# 2) 实际用户与虚拟用户一致。
 # MySQLForceTildeExpansion 1
 
-
-# If you're using a transactionnal storage engine, you can enable SQL
-# transactions to avoid races. Leave this commented if you are using the
-# traditional MyIsam engine.
-
+# 如果你使用事务型存储引擎，可以启用 SQL 事务以避免竞态条件。
+# 如果使用传统的 MyISAM 引擎，请保持此项注释。
 # MySQLTransactions On
 ```
 
