--- a/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
@@ -116,33 +116,54 @@ root     rsync      1185  5  tcp4   192.168.100.20:873    *:*
 
 #### **防火墙放行 rsync 服务**
 
-```sh
-# ee /etc/ipfw.rules
 
-IPF="ipfw -q add"
+编辑 `/etc/ipfw.rules`，写入：
+
+```
+# 定义添加规则的命令，-q 表示静默模式
+cmd="ipfw -q add"
+
+# 清空现有所有规则
 ipfw -q -f flush
 
-#loopback
-$IPF 10 allow all from any to any via lo0
-$IPF 20 deny all from any to 127.0.0.0/8
-$IPF 30 deny all from 127.0.0.0/8 to any
-$IPF 40 deny tcp from any to any frag
+# 允许所有经由 lo0（本地回环接口）的流量
+$cmd 10 allow all from any to any via lo0
 
-# statefull
-$IPF 50 check-state
-$IPF 60 allow tcp from any to any established
-$IPF 70 allow all from any to any out keep-state
-$IPF 80 allow icmp from any to any
+# 拒绝任何发往 127.0.0.0/8 的流量（防止伪造 loopback）
+$cmd 20 deny all from any to 127.0.0.0/8
 
-# open port for ssh
-$IPF 110 allow tcp from any to any 22 out
-$IPF 120 allow tcp from any to any 22 in
+# 拒绝任何来自 127.0.0.0/8 的流量（防止伪造 loopback）
+$cmd 30 deny all from 127.0.0.0/8 to any
 
-# open port for rsync
-$IPF 130 allow tcp from any to any 873 in
+# 拒绝所有碎片化的 TCP 包（常用于攻击）
+$cmd 40 deny tcp from any to any frag
 
-# deny and log everything
-$IPF 500 deny log all from any to any
+# 状态规则部分（stateful 防火墙）
+# 检查已有状态连接
+$cmd 50 check-state
+
+# 允许已建立的 TCP 连接
+$cmd 60 allow tcp from any to any established
+
+# 允许所有出站连接，并记录状态（keep-state）
+$cmd 70 allow all from any to any out keep-state
+
+# 允许所有 ICMP 流量（用于 ping 等）
+$cmd 80 allow icmp from any to any
+
+# 为 SSH 打开端口
+# 允许出站 SSH 连接（通常用于客户端连接）
+$cmd 110 allow tcp from any to any 22 out
+
+# 允许入站 SSH 连接（通常用于服务器接收）
+$cmd 120 allow tcp from any to any 22 in
+
+# 为 rsync 打开端口
+# 允许入站 rsync（默认端口 873）连接
+$cmd 130 allow tcp from any to any 873 in
+
+# 拒绝并记录所有其它未匹配的流量（默认策略）
+$cmd 500 deny log all from any to any
 ```
 
 ## 服务器 A（发起端）配置
