--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.4-jie-ipfw.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.4-jie-ipfw.md
@@ -67,9 +67,6 @@ ipfw is enabled
 
 ## 编辑 `/usr/local/etc/ipfw.rules` 文件：
 
->**注意**
->
->ipfw 命令是一次性的，它会在执行时即时生效，但不会永久保存规则。你须写入指定的规则文件。
 
 指定防火墙规则：
 
@@ -107,6 +104,21 @@ $cmd 200 allow udp from any to any 138 in
 # deny and log everything # 拒绝所有未明确允许的流量，并将其记录到日志中，便于审计和故障排查。
 $cmd 500 deny log all from any to any
 ```
+
+每一条规则的结构基本都是：
+
+```sh
+# ipfw add [规则编号]① [动作] [协议] from [源地址] to [目标地址] [其他条件]
+```
+
+- ① 按优先级排序，数字越小优先级越高，可优先覆盖相同的、数字大的规则。
+
+`$cmd 500 deny log all from any to any` ——> `ipfw add 500 deny log all from any to any`
+
+>**注意**
+>
+>ipfw 命令是一次性的，它会在执行时即时生效，但不会永久保存规则。你须写入指定的规则文件。
+
 
 - 我们可以把默认拒绝的规则 `65535 deny ip from any to any` 改成默认允许
 
