--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -176,33 +176,6 @@ end;
 
 ```sh
 $ glpsol -m example -o example.out
-GLPSOL--GLPK LP/MIP Solver 5.0
-Parameter(s) specified in the command line:
- -m example -o example.out
-Reading model section from example...
-12 lines were read
-Generating z...
-Generating C1...
-Generating C2...
-Generating C3...
-Generating C4...
-Model has been successfully generated
-GLPK Simplex Optimizer 5.0
-5 rows, 5 columns, 23 non-zeros
-Preprocessing...
-4 rows, 5 columns, 18 non-zeros
-Scaling...
- A: min|aij| =  1.000e-02  max|aij| =  1.000e+00  ratio =  1.000e+02
-GM: min|aij| =  5.774e-01  max|aij| =  1.732e+00  ratio =  3.000e+00
-EQ: min|aij| =  3.333e-01  max|aij| =  1.000e+00  ratio =  3.000e+00
-Constructing initial basis...
-Size of triangular part is 4
-*     0: obj =  -0.000000000e+00 inf =   0.000e+00 (5)
-*     2: obj =   4.366080000e+02 inf =   0.000e+00 (0)
-OPTIMAL LP SOLUTION FOUND
-Time used:   0.0 secs
-Memory used: 0.1 Mb (102208 bytes)
-Writing basic solution to 'example.out'...
 ```
 
 打开 **example.out** 文件：
@@ -232,25 +205,7 @@ Objective:  z = 436.608 (MAXimum)
      4 x4           NL             0             0                    -0.71125
      5 x5           B            480             0
 
-Karush-Kuhn-Tucker optimality conditions:
-
-KKT.PE: max.abs.err = 0.00e+00 on row 0
-        max.rel.err = 0.00e+00 on row 0
-        High quality
-
-KKT.PB: max.abs.err = 0.00e+00 on row 0
-        max.rel.err = 0.00e+00 on row 0
-        High quality
-
-KKT.DE: max.abs.err = 1.11e-16 on column 5
-        max.rel.err = 4.34e-17 on column 5
-        High quality
-
-KKT.DB: max.abs.err = 0.00e+00 on row 0
-        max.rel.err = 0.00e+00 on row 0
-        High quality
-
-End of output
+……省略一部分……
 ```
 
 可查看解答值为：`x3 = 720`，`x5 = 480`，其余各项值为 `0`。
