--- a/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
@@ -217,6 +217,16 @@ net ads testjoin
 
 ### 测试 Kerberos
 
+```sh
+kinit administrator
+# Enter domain admin password, it should return to the prompt with no errors
+klist
+# Credentials cache: FILE:/tmp/krb5cc_0
+#    Principal: administrator@SVROS.COM
+#
+# Issued                Expires               Principal
+# Dec  6 10:15:39 2021  Feb  4 20:15:39 2021  krbtgt
+```
 
 ### 测试 Winbind
 
