--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -4,9 +4,7 @@
 
 手动编辑 `/etc/resolv.conf` 后，重启系统又会被重置，因为 DHCP 会重写这个文件。
 
-防止 `resolvconf` 服务覆盖 `resolv.conf`：
-
-编辑 `/etc/resolvconf.conf`，写入 `resolvconf=NO`
+防止 `resolvconf` 服务覆盖 `resolv.conf`：编辑 `/etc/resolvconf.conf`，写入 `resolvconf=NO`
 
 ### 参考文献
 
@@ -39,11 +37,8 @@ root@ykla:~ #
 
 ## 配置 DNS
 
-```sh
-# ee /etc/resolv.conf
-```
 
-清空里面原有内容。添加以下内容：
+编辑 `/etc/resolv.conf`，清空里面原有内容。添加以下内容：
 
 ```sh
 nameserver 223.5.5.5 # 阿里 DNS，下同
@@ -51,15 +46,13 @@ nameserver 223.6.6.6
 nameserver 8.8.8.8   # 谷歌 DNS，境外设备用
 ```
 
-之后重启一下网络配置
+之后重启一下网络配置：
 
 ```sh
 # /etc/netstart restart
 ```
 
-尝试 ping 一下 163.com。（按下 ctrl + C 可中断）
-
-示例输出：
+尝试 ping 一下 163.com。（按下 ctrl + C 可中断），示例输出：
 
 ```sh
 root@ykla:~ # ping 163.com
@@ -75,7 +68,6 @@ root@ykla:~ #
 ```
 
 网络连通。
-
 
 ## 将网卡设为混杂模式
 
