--- a/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
@@ -1,5 +1,7 @@
 # 第 16.7 节 Samba 服务器
 
+samba 须开放防火墙的 tcp/139、445 端口；udp/137、138 端口。
+
 ## 设置 samba 为独立服务器
 
 ### 安装 samba
@@ -269,7 +271,3 @@ getent group
 ```sh
 # chmod -R 0700 /samba/testshare
 ```
-
-## 防火墙
-
-samba 须开放 tcp/139、445 端口；udp/137、138 端口。
