--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.1-jie-shu-mei-pai-de-jian-jie.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.1-jie-shu-mei-pai-de-jian-jie.md
@@ -30,30 +30,13 @@
 
 - 为什么不买基于瑞芯微（Rockchip）的 RK 3588/3528/35xx？
 
-答：所有瑞芯微的配套支持均十分欠缺，几乎只保证你能开机。**他可以标他支持 8K，但是有没有驱动就是你的问题了。** **他们并非基金会或设计用于教育目的。** 他们都是标准的商品，故相关配套产品应由其开发板提供商提供，**用户没有义务为其进行任何移植**（除非是工业开发，如果你付费，他们会提供支持）。拿来玩的用户需要的是开箱即用的产品，即使是开发板亦如此。如果你提供不了任何最基本的技术支持，或者需要用户自行维护 Linux 主线，那么我建议不要做成商业产品。如果需要用户来做这些本应由瑞芯微（或开发板制造商）去做的事，那么我建议瑞芯微开发板制造商应为其付费。**换言之，这压根就不是同类产品。瑞芯微更适合专业的从业者使用。**
+不是同类产品。瑞芯微更适合专业的从业者使用。
 
->**思考题**
->
->在某些人的思想中，这并非瑞芯微的问题，是用户的计算机技术不行，水平太低，也不想查手册花时间去学，动手去移植。瑞芯微已经很便宜了，没有义务提供这些。
->
->“整个行业都这样，反而树莓派才是异类。是你玩的开发板太少啦！”
->
->这些人已全然忘记 Ubuntu 这个来自非洲大地的词语本意。
->
->那么，我再说一遍：
->
->>你提供的是商业产品。故提供驱动程序、在生命周期内，集成到最新主线 LTS Linux 内核、长期维护的在线/离线文档、除开发板外的周边产品（外壳、电源、各种线缆和转接器、扩展板、散热器、天线等）、是你应尽的、且是最基本的义务。
->>
->>**不要试图将你的任何责任转嫁给用户，即使某些用户自己也拎不清。**
->>
->>**如果你提供不了任何最基本的技术支持，或者需要用户自行维护 Linux 主线，那么我建议不要做成商业零售产品。**
->>
->① 技术人员与非技术人员存在任何事实上的区别吗？如果消费者产品不能为用户提供任何技术支持，它是一款合格的消费者产品吗？
->
->② 面对中文编程、Linux 怎么安装 exe 这些问题，除了 [易语言](https://www.dywt.com.cn/) 和 [WineHQ 项目](https://www.winehq.org/)，究竟有谁认真对待过？这是合理的吗？你又是怎么做的呢？
->
->③ 面对这些问题，我们除了嘲笑，还能做些什么？
+你提供的是商业产品。故提供驱动程序、在生命周期内，集成到最新主线 LTS Linux 内核、长期维护的在线/离线文档、除开发板外的周边产品（外壳、电源、各种线缆和转接器、扩展板、散热器、天线等）、是你应尽的、且是最基本的义务。
 
+**不要试图将你的任何责任转嫁给用户，即使某些用户自己也拎不清。**
+
+**如果你提供不了任何最基本的技术支持，或者需要用户自行维护 Linux 主线，那么我建议不要做成商业零售产品。**
 
 - 只有瑞芯微和博通可选？
 
@@ -69,11 +52,7 @@
 
 树莓派的 SD 卡接口限制了存储卡的速率，并不会太高，因此使用标称 100MB+ 的存储卡毫无体验——且他们的速度也是无意义的，必须使用所谓的超频读卡器。除此以外，没有任何设备能支持他们所宣称的速度。
 
-对于树莓派来说，4K 随机读写速率才是最重要的。
-
-测试标准必须至少达到存储卡的 [A2 级别（读 4000 IOPS、写 2000 IOPS）](https://www.kingston.com/cn/blog/personal-storage/microsd-sd-memory-card-naming-conventions)。
-
-
+对于树莓派来说，4K 随机读写速率才是最重要的。测试标准必须至少达到存储卡的 [A2 级别（读 4000 IOPS、写 2000 IOPS）](https://www.kingston.com/cn/blog/personal-storage/microsd-sd-memory-card-naming-conventions)。
 
 ### 部分 U 盘的 4K 速写速度可能还不如正常的 A2 存储卡
 
