--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.3-jie-shi-yong-pei-zhi.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.3-jie-shi-yong-pei-zhi.md
@@ -4,30 +4,7 @@
 
 使用 XShell 即可登录树莓派。用户名密码均为 `freebsd`。root 需要登录后输入 `su`，密码为 `root`。
 
-可通过更改 `/etc/ssh/sshd_config` 文件来开启 root 账户的 ssh 远程登录权限。
-
-方法：
-
-编辑 `/etc/ssh/sshd_config` （注意是 sshd 不是 ssh！这是两个文件），修改或者加入：
-
-```sh
-PermitRootLogin yes #允许 root 登录
-PasswordAuthentication yes # 设置是否使用口令验证。
-```
-
-（也可以把对应行前面的注释 # 去掉，注意 `PermitRootLogin` 一行默认是 no，去掉后要改成 yes。即 `PermitRootLogin yes` ）。
-
-然后重启服务：
-
-```sh
-# service sshd restart
-```
-
-## 时间与时区
-
-**时区设置**
-
-调整时区：
+## 调整时区：
 
 ```sh
 # tzsetup
@@ -36,7 +13,7 @@ PasswordAuthentication yes # 设置是否使用口令验证。
 要选择 `No`--> `5  Asia`--> `9  China`--> `1 Beijing Time`--> ` Does the abbreviation CST' look reasonable? `--> 选择 `Yes`。
 
 
-**时间设置**
+## 时间设置
 
 然后就是时间设置问题，树莓派 5 以前的款式没有板载 RTC 时钟来确保时间准确。所以完全依靠 NTP 服务来校正时间，如果时间不准确，将影响很多服务的运行，比如无法执行 portsnap auto 命令。
 
@@ -63,10 +40,6 @@ ntpdate_flags="0.cn.pool.ntp.org"
 # date
 Tue Aug  1 16:45:55 CST 2023
 ```
-
-## 网络
-
-树莓派应该会自动接通互联网，所以不必考虑联网问题。
 
 ### 主机名
 
@@ -135,14 +108,6 @@ show_cpu_temperature=1
 
 - [Settings are not saved](https://github.com/htop-dev/htop/issues/949)
 
-## 树莓派 ZFS 调优
-
-
-启用预存（在 `/etc/sysctl.conf` 写入）：
-
-```sh
-vfs.zfs.l2arc_noprefetch=0
-```
 
 
 ## 参考文献
