--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -2,9 +2,7 @@
 
 ## 安装 Wildfly
 
->**技巧**
->
->目前在 Ports 中提供了多个 wildfly 多个版本，具体参见 <https://www.freshports.org/java/wildfly>。
+历史版本可以自行通过 Ports 获取，但是有 Bug [java/wildfly: service start fail, illegal group name](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285956)，历史版本需要自己打下补丁。
 
 - 使用 pkg 安装：
 
