--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -2,7 +2,9 @@
 
 ## 安装 Wildfly
 
-历史版本可以自行通过 Ports 获取，但是有 Bug [java/wildfly: service start fail, illegal group name](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285956)，历史版本需要自己打下补丁。
+>**注意**
+>
+>可以自行通过 Ports 获取 Wildfly 历史版本，但是有 Bug [java/wildfly: service start fail, illegal group name](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285956)，历史版本需要自己打下补丁。
 
 - 使用 pkg 安装：
 
