--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -1,10 +1,10 @@
-# 第 16.5 节 Wildfly
+# 第 16.5 节 WildFly
 
-## 安装 Wildfly
+## 安装 WildFly
 
 >**注意**
 >
->可以自行通过 Ports 获取 Wildfly 历史版本，但是有 Bug [java/wildfly: service start fail, illegal group name](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285956)，历史版本需要自己打下补丁。
+>可以自行通过 Ports 获取 WildFly 历史版本，但是有 Bug [java/wildfly: service start fail, illegal group name](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285956)，历史版本需要自己打下补丁。
 
 - 使用 pkg 安装：
 
@@ -19,7 +19,7 @@
 # make install clean
 ```
 
-## 查看 Wildfly 安装后说明
+## 查看 WildFly 安装后说明
 
 ```sh
 # wildfly-35.0.1:
@@ -116,6 +116,6 @@ Added user 'test' with groups  to file '/usr/local/wildfly/domain/configuration/
 
 - 如果服务无法正常启动，可以通过 `/var/log/wildfly/error`、`/var/log/wildfly/log` 查看错误日志。
 
-- 界面不知道怎么设置中文
+- WildFly GUI 界面不知道怎么设置中文
 
 待解决
