--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -1,10 +1,10 @@
-# 第 16.5 节 Wildfly
+# 第 16.5 节 WildFly
 
-## 安装
+## 安装 WildFly
 
->**技巧**
+>**注意**
 >
->目前在 Ports 中提供了多个 wildfly 多个版本，具体参见 <https://www.freshports.org/java/wildfly>。
+>可以自行通过 Ports 获取 WildFly 历史版本，但是有 Bug [java/wildfly: service start fail, illegal group name](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285956)，历史版本需要自己打下补丁。
 
 - 使用 pkg 安装：
 
@@ -19,7 +19,7 @@
 # make install clean
 ```
 
-## 查看安装后说明
+## 查看 WildFly 安装后说明
 
 ```sh
 # wildfly-35.0.1:
@@ -51,7 +51,7 @@
 # /usr/local/wildfly/bin/add-user.sh
 ```
 
-## 配置
+## 配置 Wildfly
 
 在 `/etc/hosts` 增加以下代码，其中 `ykla` 为本机 `hostname`（主机名，安装时设置的）。
 
@@ -64,22 +64,58 @@
 ```sh
 # service wildfly enable
 # sysrc wildfly_args="-Djboss.bind.address=0.0.0.0 -Djboss.bind.address.management=0.0.0.0"
-# sysrc wildfly_log_stdout="/dev/null"
-# sysrc wildfly_log_stderr="/dev/null"
 ```
 
-然后启动服务：
+- 然后启动服务：
 
 ```sh
 # service wildfly start
 ```
 
-打开 `http://127.0.0.1:8080` 即可检验服务状态。
+- 打开 `http://127.0.0.1:8080`（对应的局域网也可以连接）即可检验服务状态。
 
-> **可选**
->
-> 还可以用 `/usr/local/wildfly26/bin/add-user.sh` 生成管理员账户，
+![](../.gitbook/assets/wildfly1.png)
+
+- 可以用 `/usr/local/wildfly/bin/add-user.sh` 生成管理员账户。
+
+```sh
+# /usr/local/wildfly/bin/add-user.sh
+
+What type of user do you wish to add?
+ a) Management User (mgmt-users.properties)
+ b) Application User (application-users.properties)
+(a): # 默认是管理员账户
+
+Enter the details of the new user to add.
+Using realm 'ManagementRealm' as discovered from the existing property files.
+Username : test # 输入用户名
+Password recommendations are listed below. To modify these restrictions edit the add-user.properties configuration file.
+ - The password should be different from the username
+ - The password should not be one of the following restricted values {root, admin, administrator}
+ - The password should contain at least 8 characters, 1 alphabetic character(s), 1 digit(s), 1 non-alphanumeric symbol(s)
+Password : # 输入密码，对复杂度有些要求
+Re-enter Password :
+What groups do you want this user to belong to? (Please enter a comma separated list, or leave blank for none)[  ]:
+About to add user 'test' for realm 'ManagementRealm'
+Is this correct yes/no? yes # 确认创建
+Added user 'test' to file '/usr/local/wildfly/standalone/configuration/mgmt-users.properties'
+Added user 'test' to file '/usr/local/wildfly/domain/configuration/mgmt-users.properties'
+Added user 'test' with groups  to file '/usr/local/wildfly/standalone/configuration/mgmt-groups.properties'
+Added user 'test' with groups  to file '/usr/local/wildfly/domain/configuration/mgmt-groups.properties'
+```
+
+- 打开 `http://localhost:9990`（对应的局域网也可以连接，例如我是 `http://192.168.179.150:9990/`）即可登录管理界面。
+
+![](../.gitbook/assets/wildfly2.png)
+
+
+![](../.gitbook/assets/wildfly3.png)
+
 
 ## 故障排除与未竟事宜
 
-如果服务无法正常启动，可以通过 `/usr/local/wildfly26/standalone/log/server.log` 查看错误日志。
+- 如果服务无法正常启动，可以通过 `/var/log/wildfly/error`、`/var/log/wildfly/log` 查看错误日志。
+
+- WildFly GUI 界面不知道怎么设置中文
+
+待解决
