--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -84,19 +84,25 @@
 What type of user do you wish to add?
  a) Management User (mgmt-users.properties)
  b) Application User (application-users.properties)
-(a): # 默认是管理员账户
+(a): # 我直接回车了
+# 默认 a 是管理员账户。b 是应用用户。
 
 Enter the details of the new user to add.
 Using realm 'ManagementRealm' as discovered from the existing property files.
-Username : test # 输入用户名
+Username : test # 输入要创建的用户名
 Password recommendations are listed below. To modify these restrictions edit the add-user.properties configuration file.
- - The password should be different from the username
- - The password should not be one of the following restricted values {root, admin, administrator}
+ - The password should be different from the username 
+# 密码不能和用户名相同
+ - The password should not be one of the following restricted values {root, admin, administrator} 
+# 密码不能是 root、admin 或 administrator
  - The password should contain at least 8 characters, 1 alphabetic character(s), 1 digit(s), 1 non-alphanumeric symbol(s)
-Password : # 输入密码，对复杂度有些要求
-Re-enter Password :
-What groups do you want this user to belong to? (Please enter a comma separated list, or leave blank for none)[  ]:
+#密码应至少包含 8 个字符，且最少包含 1 个字母、1 个数字、1 个非字母非数字符号。
+Password : # 输入为新用户 test 设置的密码，要求见上文
+Re-enter Password : # 重复输入密码
+What groups do you want this user to belong to? (Please enter a comma separated list, or leave blank for none)[  ]: # 我直接回车了
+# 你希望该用户属于哪些用户组？（请输入以逗号分隔的列表，或留空表示不加入任何用户组）[  ]：
 About to add user 'test' for realm 'ManagementRealm'
+# 即将为域 'ManagementRealm' 添加用户 'test'。
 Is this correct yes/no? yes # 确认创建
 Added user 'test' to file '/usr/local/wildfly/standalone/configuration/mgmt-users.properties'
 Added user 'test' to file '/usr/local/wildfly/domain/configuration/mgmt-users.properties'
