--- a/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
@@ -1,39 +1,6 @@
-# 第 24.2 节 DragonFlyBSD 安装与配置
+# 第 24.2 节 安装 DragonFlyBSD
 
-> 安装视频：[安装 DragonFly BSD 6.4](https://www.bilibili.com/video/BV1BM41187pD/)
+安装视频：[安装 DragonFlyBSD 6.4](https://www.bilibili.com/video/BV1BM41187pD/)
 
-## 换源
 
-```sh
-# ee /usr/local/etc/pkg/repos/df-latest.conf
-```
 
-找到国内的镜像站，把 `no` 改成 `yes`，把之前的源改为 `no`。
-
->**注意**
->
->DragonFly BSD 6.4 中移除了该镜像站，需要手动配置。参考 <https://mirror.sjtu.edu.cn/docs/dragonflybsd/dports>。
-
-## 中文化
-
-`/etc/csh.cshrc` 中添加：
-
-```sh
-setenv LANG "zh_CN.UTF-8"
-```
-
-在 `/etc/profile` 文件中添加：
-
-```sh
-export LANG=zh_CN.UTF-8
-export LC_ALL="en_US.ISO8859-1"
-export LANG="en_US.ISO8859-1"
-export LC_CTYPE="en_US.ISO8859-1"
-export LANG=zh_CN.eucCN
-```
-
-## intel i915kms 显卡支持
-
-```sh
-# kldload drm
-```
