--- a/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
@@ -1,6 +1,5 @@
-# 第 24.2 节 安装 DragonFlyBSD
+# 第 24.2 节 安装 DragonFly BSD
 
-安装视频：[安装 DragonFlyBSD 6.4](https://www.bilibili.com/video/BV1BM41187pD/)
+安装视频：[安装 DragonFly BSD 6.4](https://www.bilibili.com/video/BV1BM41187pD/)
 
-
-
+DragonFly BSD 下载页面在 <https://www.dragonflybsd.org/download/>。本文使用 `Uncompressed ISO: dfly-x86_64-6.4.0_REL.iso`。U 盘安装应使用 `USB: dfly-x86_64-6.4.0_REL.img as bzip2 file`（解压后使用 Rufus 刻录 U 盘）。 
