--- a/di-24-zhang-dragonflybsd/24.3-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/24.3-pei-zhi.md
@@ -1,5 +1,19 @@
 # 第 24.3 节 配置 DragonFly BSD 
 
+## 设置 `root` 密码
+
+```sh
+# passwd root
+```
+
+## 网络
+
+```sh
+# dhclient 网卡接口名称
+```
+
+网卡接口名称可通过命令 `ifconfig` 判断。
+
 ## 换源
 
 ```sh
