--- a/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
@@ -10,3 +10,89 @@ U 盘安装应使用 `USB: dfly-x86_64-6.4.0_REL.img as bzip2 file`：解压出 
 
 ---
 
+![](../.gitbook/assets/dragonflybsd1.png)  
+
+![](../.gitbook/assets/dragonflybsd2.png)  
+
+![](../.gitbook/assets/dragonflybsd3.png)  
+
+![](../.gitbook/assets/dragonflybsd4.png)  
+
+![](../.gitbook/assets/dragonflybsd5.png)  
+
+![](../.gitbook/assets/dragonflybsd6.png)  
+
+![](../.gitbook/assets/dragonflybsd7.png)  
+
+![](../.gitbook/assets/dragonflybsd8.png)  
+
+![](../.gitbook/assets/dragonflybsd9.png)  
+
+![](../.gitbook/assets/dragonflybsd10.png) 
+
+![](../.gitbook/assets/dragonflybsd11.png)  
+
+![](../.gitbook/assets/dragonflybsd12.png)  
+
+![](../.gitbook/assets/dragonflybsd13.png)  
+
+![](../.gitbook/assets/dragonflybsd14.png)  
+
+![](../.gitbook/assets/dragonflybsd15.png)  
+
+![](../.gitbook/assets/dragonflybsd16.png)
+
+![](../.gitbook/assets/dragonflybsd17.png)  
+
+![](../.gitbook/assets/dragonflybsd18.png)  
+
+
+![](../.gitbook/assets/dragonflybsd19.png)  
+
+![](../.gitbook/assets/dragonflybsd20.png)  
+
+![](../.gitbook/assets/dragonflybsd21.png) 
+
+![](../.gitbook/assets/dragonflybsd22.png)  
+
+![](../.gitbook/assets/dragonflybsd23.png)  
+
+![](../.gitbook/assets/dragonflybsd24.png)
+
+![](../.gitbook/assets/dragonflybsd25.png)
+
+![](../.gitbook/assets/dragonflybsd26.png)  
+
+![](../.gitbook/assets/dragonflybsd27.png) 
+
+![](../.gitbook/assets/dragonflybsd28.png) 
+
+![](../.gitbook/assets/dragonflybsd29.png)  
+
+![](../.gitbook/assets/dragonflybsd30.png) 
+
+![](../.gitbook/assets/dragonflybsd31.png)  
+
+![](../.gitbook/assets/dragonflybsd32.png)  
+
+![](../.gitbook/assets/dragonflybsd33.png)  
+
+![](../.gitbook/assets/dragonflybsd34.png)  
+
+![](../.gitbook/assets/dragonflybsd35.png) 
+
+![](../.gitbook/assets/dragonflybsd36.png)  
+
+![](../.gitbook/assets/dragonflybsd37.png)  
+
+![](../.gitbook/assets/dragonflybsd38.png)  
+
+![](../.gitbook/assets/dragonflybsd39.png)  
+
+![](../.gitbook/assets/dragonflybsd40.png)  
+
+输入用户名 `root`，回车即可登录，无密码。
+
+![](../.gitbook/assets/dragonflybsd41.png)
+
+
