--- a/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
@@ -176,4 +176,8 @@ root 密码设置完成。
 
 ![](../.gitbook/assets/dragonflybsd41.png)
 
+## 故障排除与未竟事宜
 
+- 好像配置不成功，没有输入密码就登录了 root 账户。
+- VMware 17 安装失败，无论 UEFI 与否。
+- 似乎不支持 NVMe？
