--- a/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
@@ -1,37 +1,183 @@
-# 第 24.2 节 DragonFlyBSD 安装与配置
+# 第 24.2 节 安装 DragonFly BSD
 
-> 安装视频：[安装 DragonFly BSD 6.4](https://www.bilibili.com/video/BV1BM41187pD/)
+安装视频：[安装 DragonFly BSD 6.4](https://www.bilibili.com/video/BV1BM41187pD/)
 
-## 换源
+DragonFly BSD 下载页面在 <https://www.dragonflybsd.org/download/>。
 
-```sh
-# ee /usr/local/etc/pkg/repos/df-latest.conf
-```
+U 盘安装应使用 `USB: dfly-x86_64-6.4.0_REL.img as bzip2 file`：解压出 `dfly-x86_64-6.4.0_REL.img` 使用 Rufus 刻录 U 盘。 
 
-找到国内的镜像站，把 `no` 改成 `yes`，把之前的源改为 `no`。
+本文使用 `Uncompressed ISO: dfly-x86_64-6.4.0_REL.iso`。
 
-> DragonFly BSD 6.4 中移除了该镜像站，需要手动配置。参考 <https://mirror.sjtu.edu.cn/docs/dragonflybsd/dports>。
+---
 
-## 中文化
+## 启动安装盘
 
-`/etc/csh.cshrc` 中添加：
+![](../.gitbook/assets/dragonflybsd1.png)  
 
-```sh
-setenv LANG "zh_CN.UTF-8"
-```
+输入用户名 `intaller`（即安装的意思）开始安装。
 
-在 `/etc/profile` 文件中添加：
+![](../.gitbook/assets/dragonflybsd2.png)  
 
-```sh
-export LANG=zh_CN.UTF-8
-export LC_ALL="en_US.ISO8859-1"
-export LANG="en_US.ISO8859-1"
-export LC_CTYPE="en_US.ISO8859-1"
-export LANG=zh_CN.eucCN
-```
+选择 `Install DragonFly BSD`（安装 DragonFly BSD）。
 
-## intel i915kms 显卡支持
+![](../.gitbook/assets/dragonflybsd3.png)  
 
-```sh
-# kldload drm
-```
+选择 `Install DragonFly BSD`（安装 DragonFly BSD）。
+
+![](../.gitbook/assets/dragonflybsd4.png)  
+
+## 写入硬盘与引导
+
+本文基于 UEFI，我们选择 `UEFI`。新电脑（2016+）都应选择 UEFI。
+
+![](../.gitbook/assets/dragonflybsd5.png)  
+
+选择要安装的硬盘。
+
+![](../.gitbook/assets/dragonflybsd6.png)  
+
+确认硬盘。
+
+![](../.gitbook/assets/dragonflybsd7.png)  
+
+格式化完成。
+
+![](../.gitbook/assets/dragonflybsd8.png)  
+
+选择文件系统，此处我们选择 `HAMMER2`
+
+![](../.gitbook/assets/dragonflybsd9.png)  
+
+进行分区操作，完毕后选择 `Accept and Create`（确认并创建）
+
+![](../.gitbook/assets/dragonflybsd10.png) 
+
+一些警告信息，点 `OK` 确认
+
+![](../.gitbook/assets/dragonflybsd11.png)  
+
+`Being Installing Files`（开始安装文件）
+
+![](../.gitbook/assets/dragonflybsd12.png)  
+
+正在解压缩文件到硬盘：
+
+![](../.gitbook/assets/dragonflybsd13.png)
+
+## 配置系统
+
+选择 `Configure this System`（配置此系统）
+
+![](../.gitbook/assets/dragonflybsd14.png)  
+
+配置时区（`Select timezone`）：
+
+![](../.gitbook/assets/dragonflybsd15.png)  
+
+选择 `No`，手动配置时区：
+
+![](../.gitbook/assets/dragonflybsd16.png)
+
+选择 `Asia`，亚洲
+
+![](../.gitbook/assets/dragonflybsd17.png)  
+
+选择 `Shanghai`，上海，即北京时间
+
+![](../.gitbook/assets/dragonflybsd18.png)  
+
+时区配置完成。
+
+![](../.gitbook/assets/dragonflybsd19.png)  
+
+设置日期和时间（`Set date and time`）：
+
+![](../.gitbook/assets/dragonflybsd20.png)  
+
+点击 `OK` 完成配置。
+
+![](../.gitbook/assets/dragonflybsd21.png) 
+
+时间和日期配置完成。
+
+![](../.gitbook/assets/dragonflybsd22.png)  
+
+键盘布局（`Set keyboard map`）无需配置，默认即可。
+
+![](../.gitbook/assets/dragonflybsd23.png)  
+
+设置 root 密码（`Set root password`）：
+
+![](../.gitbook/assets/dragonflybsd25.png)
+
+输入密码并确认：
+
+![](../.gitbook/assets/dragonflybsd26.png)  
+
+root 密码设置完成。
+
+![](../.gitbook/assets/dragonflybsd27.png) 
+
+添加用户：
+
+![](../.gitbook/assets/dragonflybsd28.png) 
+
+设置完成后点 `Accept and Add`（确认并添加）
+
+![](../.gitbook/assets/dragonflybsd29.png)  
+
+用户添加成功。
+
+![](../.gitbook/assets/dragonflybsd30.png) 
+
+配置网络（`Configure network interface`）：
+
+![](../.gitbook/assets/dragonflybsd31.png)  
+
+选择网卡接口
+
+![](../.gitbook/assets/dragonflybsd32.png)  
+
+使用 DHCP
+
+![](../.gitbook/assets/dragonflybsd33.png)  
+
+配置完成。
+
+![](../.gitbook/assets/dragonflybsd34.png)  
+
+设置主机名和域名。
+
+![](../.gitbook/assets/dragonflybsd35.png) 
+
+## 结束安装
+
+完成设置。
+
+![](../.gitbook/assets/dragonflybsd36.png)  
+
+结束安装。
+
+![](../.gitbook/assets/dragonflybsd37.png) 
+
+重启：
+
+![](../.gitbook/assets/dragonflybsd38.png)  
+
+确认重启
+
+![](../.gitbook/assets/dragonflybsd39.png)  
+
+## 开机
+
+![](../.gitbook/assets/dragonflybsd40.png)  
+
+输入用户名 `root`，输入设置的密码，回车即可登录。
+
+![](../.gitbook/assets/dragonflybsd41.png)
+
+## 故障排除与未竟事宜
+
+- 好像配置不成功，没有输入密码就登录了 root 账户。
+- VMware 17 安装失败，无论 UEFI 与否。
+- 似乎不支持 NVMe？
