--- a/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
@@ -56,7 +56,7 @@ U 盘安装应使用 `USB: dfly-x86_64-6.4.0_REL.img as bzip2 file`：解压出 
 
 ![](../.gitbook/assets/dragonflybsd11.png)  
 
-`Being Installing Files`（开始安装文件）
+`Begin Installing Files`（开始安装文件）
 
 ![](../.gitbook/assets/dragonflybsd12.png)  
 
