--- a/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
+++ b/di-24-zhang-dragonflybsd/di-24.2-jie-an-zhuang-yu-pei-zhi.md
@@ -2,7 +2,7 @@
 
 安装视频：[安装 DragonFly BSD 6.4](https://www.bilibili.com/video/BV1BM41187pD/)
 
-DragonFly BSD RELEASE 版本下载页面在 <https://www.dragonflybsd.org/download/>。开发版 Bleeding-edge 下载页面在 <https://docs.dragonflybsd.org/user-guide/download/>
+DragonFly BSD **RELEASE** 版本下载页面在 <https://www.dragonflybsd.org/download/>。开发版 **Bleeding-edge** 下载页面在 <https://docs.dragonflybsd.org/user-guide/download/>
 
 U 盘安装应使用 `USB: dfly-x86_64-6.4.0_REL.img as bzip2 file`：解压出 `dfly-x86_64-6.4.0_REL.img` 使用 Rufus 刻录 U 盘。 
 
