--- a/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
+++ b/di-26-zhang-openbsd/di-26.2-jie-an-zhuang.md
@@ -250,6 +250,20 @@ boundend: 167772127
   k:          6144.0M         86267104  4.2BSD   2048 16384 12960 # /usr/obj
   l:         33653.4M         98850016  4.2BSD   2048 16384 12960 # /home
 ```
+- 400G 硬盘自动分区如下：
+```
+ykla# df -h
+Filesystem     Size    Used   Avail Capacity  Mounted on
+/dev/sd0a      986M    128M    809M    14%    /
+/dev/sd0l      295G   36.0K    281G     1%    /home
+/dev/sd0d      3.9G   12.0K    3.7G     1%    /tmp
+/dev/sd0f     29.1G    1.4G   26.2G     6%    /usr
+/dev/sd0g      986M    321M    615M    35%    /usr/X11R6
+/dev/sd0h     19.4G    146K   18.4G     1%    /usr/local
+/dev/sd0k      5.8G    2.0K    5.5G     1%    /usr/obj
+/dev/sd0j      4.8G    2.0K    4.6G     1%    /usr/src
+/dev/sd0e     11.5G    8.0M   11.0G     1%    /var
+```
 
 ---
 
