--- a/di-26-zhang-openbsd/di-26.5-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-26-zhang-openbsd/di-26.5-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -137,7 +137,7 @@ export GTK_IM_MODULE=XIM
 
 ```sh
 # rcctl disable xenodm
-# rcctl enable messagebus avahi_daemon gdm
+# rcctl enable messagebus gdm
 ```
 
 最后重启系统，即可登入 Gnome 桌面。
@@ -159,11 +159,11 @@ LC_MESSAGES="zh_CN.UTF-8"
 
 重启后，即可进入中文界面。
 
-## 主题和图标
+### 主题和图标
 
 以下仅举两个实例，[Qogir](https://www.gnome-look.org/p/1230631/) 主题、和 [Tela](https://www.gnome-look.org/p/1279924/) 图标，大家可访问 [相关网站](https://www.gnome-look.org/)，自行选择喜欢的主题和图标来安装。
 
-### 提前准备
+#### 提前准备
 
 终端运行
 
@@ -171,7 +171,7 @@ LC_MESSAGES="zh_CN.UTF-8"
 # pkg_add git bash
 ```
 
-### 主题安装
+#### 主题安装
 
 ```sh
 $ git clone https://github.com/vinceliuice/Qogir-theme && cd Qogir-theme
@@ -181,7 +181,7 @@ $ git clone https://github.com/vinceliuice/Qogir-theme && cd Qogir-theme
 
 之后 `bash ./install.sh`
 
-### 图标安装
+#### 图标安装
 
 ```sh
 $ git clone https://github.com/vinceliuice/Tela-icon-theme && cd Tela-icon-theme
@@ -191,7 +191,7 @@ $ git clone https://github.com/vinceliuice/Tela-icon-theme && cd Tela-icon-theme
 
 之后
 
-```
+```sh
 # bash ./install.sh
 ```
 
@@ -200,7 +200,7 @@ $ git clone https://github.com/vinceliuice/Tela-icon-theme && cd Tela-icon-theme
 
 >**警告**
 >
->该桌面在 VMware 17 UEFI 环境下有问题（窗口是灰色的，就一个鼠标可移动）。且 BIOS 模式下 root 用户面临着相同的问题，仅普通用户正常。目前不确定物理机下的状态，请有力者测试。
+>该桌面在 VMware 17 UEFI 环境下有问题（窗口是灰色的，就一个鼠标可移动）。且 BIOS 模式下 root 用户面临着相同的问题，仅普通用户正常。物理机下 UEFI 正常。
 
 本教程基于 OpenBSD 7.6。
 
@@ -220,7 +220,7 @@ multicast=YES
 启动服务：
 
 ```sh
-# rcctl enable messagebus avahi_daemon 
+# rcctl enable messagebus
 ```
 
 添加下列文字到 `~/.xsession`（xenodm 登录）或是 `~/.xinitrc`（控制台登录）。
