--- a/di-26-zhang-openbsd/di-26.5-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-26-zhang-openbsd/di-26.5-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -223,7 +223,7 @@ multicast=YES
 # rcctl enable messagebus
 ```
 
-添加下列文字到 `~/.xsession`（xenodm 登录）或是 `~/.xinitrc`（控制台登录）。
+添加下列文字到 `~/.xsession`（xenodm 登录：`rcctl enable xenodm`）或是 `~/.xinitrc`（控制台登录）。
 
 ```sh
 . ~/.profile
