--- a/di-26-zhang-openbsd/di-26.5-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-26-zhang-openbsd/di-26.5-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -81,6 +81,12 @@ apmd_flags=-A
 multicast=YES
 ```
 
+- 服务：
+
+```sh
+# rcctl enable messagebus avahi_daemon
+```
+
 终端输入
 
 ```sh
@@ -137,7 +143,7 @@ export GTK_IM_MODULE=XIM
 
 ```sh
 # rcctl disable xenodm
-# rcctl enable messagebus gdm
+# rcctl enable messagebus gdm avahi_daemon
 ```
 
 最后重启系统，即可登入 Gnome 桌面。
@@ -220,7 +226,7 @@ multicast=YES
 启动服务：
 
 ```sh
-# rcctl enable messagebus
+# rcctl enable messagebus avahi_daemon
 ```
 
 添加下列文字到 `~/.xsession`（xenodm 登录：`rcctl enable xenodm`）或是 `~/.xinitrc`（控制台登录）。
