--- a/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
+++ b/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
@@ -16,7 +16,7 @@ NetBSD 的包管理器是 pkgsrc，同时支持二进制与源代码编译安装
 - TUNA
 
 ```sh
-# echo https://mirrors.tuna.tsinghua.edu.cn/pkgsrc/packages/NetBSD/amd64/10.1/All  > /usr/pkg/etc/pkgin/repositories.conf
+# echo https://mirrors.tuna.tsinghua.edu.cn/pkgsrc/packages/NetBSD/amd64/10.1/All/  > /usr/pkg/etc/pkgin/repositories.conf
 ```
 
 需要注意的 NetBSD 的源比较混乱，有时候一个源不能满足要求，要多换几个源看看，换哪个直接谷歌搜索“包名+netbsd.org”，如“kde4 netbsd.org”，点进去诸如 <https://cdn.netbsd.org/pub/pkgsrc/current/pkgsrc/print/libcups/index.html> 域名所提供的。
