--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.5-jie-grub-ji-qi-ta-yin-dao.md
@@ -127,32 +127,9 @@ BootOrder  : 0002, 0003, 0000, 0001
 +Boot0001* freebsd # + 为默认启动项
 ```
 
-详细说明：
-
-```sh
-root@ykla:/home/ykla # efibootmgr -v
-Boot to FW : false
-BootCurrent: 0001
-Timeout    : 1 seconds
-BootOrder  : 0002, 0003, 0000, 0001
- Boot0002* Windows Boot Manager HD(1,GPT,dd850df0-4bc5-11eb-9e72-1002b5860b22,0x28,0x8a7d8)/File(\EFI\Microsoft\Boot\bootmgfw.efi)
-                                   nda0p1:/EFI/Microsoft/Boot/bootmgfw.efi (null)
- Boot0003* UEFI OS HD(1,GPT,ea7e17b0-f265-11ef-a633-1002b5860ef9,0x28,0x82000)/File(\EFI\BOOT\BOOTX64.EFI)
-                      gpt/efiboot0:/EFI/BOOT/BOOTX64.EFI /boot/efi//EFI/BOOT/BOOTX64.EFI
- Boot0000* refind HD(1,GPT,dd850df0-4bc5-11eb-9e72-1002b5860b22,0x28,0x8a7d8)/File(\EFI\refind\refind_x64.efi)
-                     nda0p1:/EFI/refind/refind_x64.efi (null)
-+Boot0001* freebsd HD(1,GPT,ea7e17b0-f265-11ef-a633-1002b5860ef9,0x28,0x82000)/File(\efi\freebsd\loader.efi)
-                      gpt/efiboot0:/efi/freebsd/loader.efi /boot/efi//efi/freebsd/loader.efi
-
-
-Unreferenced Variables:
- Boot0005* UEFI OS HD(1,GPT,ea7e17b0-f265-11ef-a633-1002b5860ef9,0x28,0x82000)/File(\EFI\BOOT\BOOTX64.EFI)
-                      gpt/efiboot0:/EFI/BOOT/BOOTX64.EFI /boot/efi//EFI/BOOT/BOOTX64.EFI
- Boot0004* UEFI: KingstonDataTraveler 3.00000, Partition 1 PciRoot(0x0)/Pci(0x14,0x0)/USB(0x2,0x0)/HD(1,MBR,0x90909090,0x1,0x10418)
-                                                          VenHw(2d6447ef-3bc9-41a0-ac19-4d51d01b4ce6,4500300044003500350045004100350033003500390043003100370035003000390038003900420030003700460036000000)
-
-
-```
+>**技巧**
+>
+>详细说明可以用 `efibootmgr -v`。
 
 - 设置 refind 优先启动（这不意味着他是默认启动项，这是改变在 BIOS 中的排序罢了）：
 
