--- a/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
@@ -48,7 +48,9 @@ pcm.!default pcm.sysdefault
 # useradd --uid 1001 --gid 0 -m ykla # 此步骤在兼容层里操作！
 ```
 
-**在 Arch 中创建用户 ykla 后，此用户无法用于 yay 安装软件，仍然需要使用 shell 脚本默认创建的 test 用户。**
+>**警告**
+>
+>在 Arch 中创建用户 ykla 后，此用户无法用于 yay 安装软件，仍然需要使用 shell 脚本默认创建的 test 用户。
 
 ## 设置图标双击启动程序
 
@@ -126,17 +128,15 @@ export GTK_IM_MODULE=fcitx
 export QT_IM_MODULE=feitx
 ```
 
-如果遇到类似 sh: warning: setlocale: LC_ALL: cannot change locale (zh_CN.uTF-8) 这样的错误：<br>
-以 OpenSUSE 为例，安装 glibc-lang 和 glibc-locale 这两个包，退出兼容层以后重新进入即可。<br>
-其他系统可以搜索相似的包，例如 CentOS 兼容层，应该安装 glibc-locale-source glibc-langpack-zh
+如果遇到类似 sh: warning: setlocale: LC_ALL: cannot change locale (zh_CN.uTF-8) 这样的错误。以 OpenSUSE 为例，安装 `glibc-lang` 和 `glibc-locale` 这两个包，退出兼容层以后重新进入即可。其他系统可以搜索相似的包，例如 CentOS 兼容层，应该安装 `glibc-locale-source`、`glibc-langpack-zh`。
 
 ## sysctl 变量（基于 FreeBSD 14.1）
 
 ```sh
-root@ykla:~ # sysctl -a -d  | grep -E "linux|compat.linux"
+# sysctl -a -d  | grep -E "linux|compat.linux"
 ```
 
-以下是输出的翻译和表格化：
+列出一些常用的：
 
 |sysctl 变量 | 解释|
 | :--- | :--- |
@@ -144,99 +144,17 @@ root@ykla:~ # sysctl -a -d  | grep -E "linux|compat.linux"
 | `kern.features.linux` | 支持 32 位 Linux |
 | `kern.features.linuxulator_v4l2` | 在 Linux 兼容层中支持 V4L2 ioctl 包装器 |
 | `kern.features.linuxulator_v4l` | 在 Linux 兼容层中支持 V4L ioctl 包装器 |
-| `vm.uma.linux_dma_object` | - |
-| `vm.uma.linux_dma_object.stats` | - |
-| `vm.uma.linux_dma_object.stats.xdomain` | 来自错误域的释放调用 |
-| `vm.uma.linux_dma_object.stats.fails` | 分配失败的次数 |
-| `vm.uma.linux_dma_object.stats.frees` | 总释放调用次数 |
-| `vm.uma.linux_dma_object.stats.allocs` | 总分配调用次数 |
-| `vm.uma.linux_dma_object.stats.current` | 当前已分配的项数量 |
-| `vm.uma.linux_dma_object.domain` | - |
-| `vm.uma.linux_dma_object.domain.0` | - |
-| `vm.uma.linux_dma_object.domain.0.timin` | 自零长时间最小项计数以来的时间 |
-| `vm.uma.linux_dma_object.domain.0.limin` | 长时间最小项计数 |
-| `vm.uma.linux_dma_object.domain.0.wss` | 工作集大小 |
-| `vm.uma.linux_dma_object.domain.0.bimin` | 此批次中的最小项计数 |
-| `vm.uma.linux_dma_object.domain.0.imin` | 此期间的最小项计数 |
-| `vm.uma.linux_dma_object.domain.0.imax` | 此期间的最大项计数 |
-| `vm.uma.linux_dma_object.domain.0.nitems` | 此域中的项数 |
-| `vm.uma.linux_dma_object.limit` | - |
-| `vm.uma.linux_dma_object.limit.bucket_max` | 每个域的桶缓存中的最大项数 |
-| `vm.uma.linux_dma_object.limit.sleeps` | 区域限制睡眠总数 |
-| `vm.uma.linux_dma_object.limit.sleepers` | 达到限制时睡眠的线程数 |
-| `vm.uma.linux_dma_object.limit.max_items` | 分配和缓存的最大项数 |
-| `vm.uma.linux_dma_object.limit.items` | 如果设置了限制，当前已分配的项数量 |
-| `vm.uma.linux_dma_object.keg` | - |
-| `vm.uma.linux_dma_object.keg.domain` | - |
-| `vm.uma.linux_dma_object.keg.domain.0` | - |
-| `vm.uma.linux_dma_object.keg.domain.0.free_slabs` | 未使用的 slab |
-| `vm.uma.linux_dma_object.keg.domain.0.free_items` | slab 层中的空闲项 |
-| `vm.uma.linux_dma_object.keg.domain.0.pages` | 当前从 VM 分配的总页面 |
-| `vm.uma.linux_dma_object.keg.efficiency` | slab 利用率（100 - 内部碎片率%） |
-| `vm.uma.linux_dma_object.keg.reserve` | 保留的项数 |
-| `vm.uma.linux_dma_object.keg.align` | 项对齐掩码 |
-| `vm.uma.linux_dma_object.keg.ipers` | 每个 slab 可用的项数 |
-| `vm.uma.linux_dma_object.keg.ppera` | 每个 slab 的页面分配数量 |
-| `vm.uma.linux_dma_object.keg.rsize` | 对齐后的实际对象大小 |
-| `vm.uma.linux_dma_object.keg.name` | keg 名称 |
-| `vm.uma.linux_dma_object.bucket_size_max` | 每个 CPU 缓存的最大允许大小 |
-| `vm.uma.linux_dma_object.bucket_size` | 每个 CPU 缓存的期望大小 |
-| `vm.uma.linux_dma_object.flags` | 分配器配置标志 |
-| `vm.uma.linux_dma_object.size` | 分配大小 |
-| `vm.uma.linux_dma_pctrie` | - |
-| `vm.uma.linux_dma_pctrie.stats` | - |
-| `vm.uma.linux_dma_pctrie.stats.xdomain` | 来自错误域的释放调用 |
-| `vm.uma.linux_dma_pctrie.stats.fails` | 分配失败的次数 |
-| `vm.uma.linux_dma_pctrie.stats.frees` | 总释放调用次数 |
-| `vm.uma.linux_dma_pctrie.stats.allocs` | 总分配调用次数 |
-| `vm.uma.linux_dma_pctrie.stats.current` | 当前已分配的项数量 |
-| `vm.uma.linux_dma_pctrie.domain` | - |
-| `vm.uma.linux_dma_pctrie.domain.0` | - |
-| `vm.uma.linux_dma_pctrie.domain.0.timin` | 自零长时间最小项计数以来的时间 |
-| `vm.uma.linux_dma_pctrie.domain.0.limin` | 长时间最小项计数 |
-| `vm.uma.linux_dma_pctrie.domain.0.wss` | 工作集大小 |
-| `vm.uma.linux_dma_pctrie.domain.0.bimin` | 此批次中的最小项计数 |
-| `vm.uma.linux_dma_pctrie.domain.0.imin` | 此期间的最小项计数 |
-| `vm.uma.linux_dma_pctrie.domain.0.imax` | 此期间的最大项计数 |
-| `vm.uma.linux_dma_pctrie.domain.0.nitems` | 此域中的项数 |
-| `vm.uma.linux_dma_pctrie.limit` | - |
-| `vm.uma.linux_dma_pctrie.limit.bucket_max` | 每个域的桶缓存中的最大项数 |
-| `vm.uma.linux_dma_pctrie.limit.sleeps` | 区域限制睡眠总数 |
-| `vm.uma.linux_dma_pctrie.limit.sleepers` | 达到限制时睡眠的线程数 |
-| `vm.uma.linux_dma_pctrie.limit.max_items` | 分配和缓存的最大项数 |
-| `vm.uma.linux_dma_pctrie.limit.items` | 如果设置了限制，当前已分配的项数量 |
-| `vm.uma.linux_dma_pctrie.keg` | - |
-| `vm.uma.linux_dma_pctrie.keg.domain` | - |
-| `vm.uma.linux_dma_pctrie.keg.domain.0` | - |
-| `vm.uma.linux_dma_pctrie.keg.domain.0.free_slabs` | 未使用的 slab |
-| `vm.uma.linux_dma_pctrie.keg.domain.0.free_items` | slab 层中的空闲项 |
-| `vm.uma.linux_dma_pctrie.keg.domain.0.pages` | 当前从 VM 分配的总页面 |
-| `vm.uma.linux_dma_pctrie.keg.efficiency` | slab 利用率（100 - 内部碎片率%） |
-| `vm.uma.linux_dma_pctrie.keg.reserve` | 保留的项数 |
-| `vm.uma.linux_dma_pctrie.keg.align` | 项对齐掩码 |
-| `vm.uma.linux_dma_pctrie.keg.ipers` | 每个 slab 可用的项数 |
-| `vm.uma.linux_dma_pctrie.keg.ppera` | 每个 slab 的页面分配数量 |
-| `vm.uma.linux_dma_pctrie.keg.rsize` | 对齐后的实际对象大小 |
-| `vm.uma.linux_dma_pctrie.keg.name` | keg 名称 |
-| `vm.uma.linux_dma_pctrie.bucket_size_max` | 每个 CPU 缓存的最大允许大小 |
-| `vm.uma.linux_dma_pctrie.bucket_size` | 每个 CPU 缓存的期望大小 |
-| `vm.uma.linux_dma_pctrie.flags` | 分配器配置标志 |
-| `vm.uma.linux_dma_pctrie.size` | 分配大小 |
-| `vfs.nfsd.linux42server` | 启用 Linux 风格的 NFSv4.2 服务器（不符合 RFC） |
 | `vfs.nfsd.flexlinuxhack` | 对于 Linux 客户端，绕过 Flex 文件布局错误 |
 | `net.netlink.debug.nl_linux_debug_level` | 调试级别 |
-| `hw.snd.compat_linux_mmap` | Linux mmap 兼容性（-1=强制禁用 0=自动 1=强制启用） |
+| `hw.snd.compat_linux_mmap` | Linux mmap 兼容性（-1 = 强制禁用；0 = 自动；1 = 强制启用） |
 | `security.jail.param.linux` | Jail Linux 参数 |
 | `security.jail.param.linux.oss_version` | Jail Linux OSS 版本 |
 | `security.jail.param.linux.osrelease` | Jail Linux 内核 OS 版本 |
 | `security.jail.param.linux.osname` | Jail Linux 内核 OS 名称 |
 | `compat.linux32` | 32 位 Linux 仿真 |
 | `compat.linux32.emulate_i386` |仿真真实的 i386 |
-| `compat.linux32.maxvmem` | - |
-| `compat.linux32.maxssiz` | - |
-| `compat.linux32.maxdsiz` | - |
-| `compat.linux` | Linux 模式 |
-| `compat.linux.use_real_ifnames` | 使用 FreeBSD 接口名称而不是生成 ethN 别名 |
+| `compat.linux` | Linux 仿真 |
+| `compat.linux.use_real_ifnames` | 使用 FreeBSD 接口名称而不是生成 `ethN` 别名 |
 | `compat.linux.emul_path` | Linux 运行时环境路径 |
 | `compat.linux.oss_version` | Linux OSS 版本 |
 | `compat.linux.osrelease` | Linux 内核 OS 版本 |
@@ -244,16 +162,7 @@ root@ykla:~ # sysctl -a -d  | grep -E "linux|compat.linux"
 | `compat.linux.setid_allowed` | 允许在 Linux 二进制文件的 execve 上设置 setuid/setgid |
 | `compat.linux.map_sched_prio` | 将调度优先级映射到 Linux 优先级（不符合 POSIX） |
 | `compat.linux.preserve_vstatus` | 保留 VSTATUS termios(4) 标志 |
-| `compat.linux.ignore_ip_recverr` | 忽略启用 IP_RECVERR |
-| `compat.linux.dummy_rlimits` | 返回不支持的 Linux 特定 rlimits 的虚拟值 |
 | `compat.linux.default_stacksize` | 默认软堆栈大小资源限制，或 -1 表示无限制 |
 | `compat.linux.default_openfiles` | 默认软打开文件资源限制，或 -1 表示无限制 |
 | `compat.linux.debug` | 记录来自 linux(4) 的警告；或 0 表示禁用 |
-| `compat.linuxkpi` | LinuxKPI 参数 |
-| `compat.linuxkpi.skb` | LinuxKPI skbuff |
-| `compat.linuxkpi.skb.mem_limit` | SKB 内存限制：0=无限制，1=32 位，2=36 位，其他=未定义（当前为 32 位） |
-| `compat.linuxkpi.lkpi_pci_nseg1_fail` | 单段 busdma 映射失败的计数 |
-| `compat.linuxkpi.task_struct_reserve` | 为不可睡眠分配保留的 struct task 和 struct mm 数量 |
-| `compat.linuxkpi.net_ratelimit` | 每秒 LinuxKPI 网消息的限制数 |
-| `compat.linuxkpi.warn_dump_stack` | 设置以启用来自 WARN_ON() 的堆栈跟踪。清除以禁用。 |
-| `compat.linuxkpi.debug` | 设置以启用 pr_debug() 打印。清除以禁用。 |
+
