--- a/di-11-zhang-ji-suan-ji-gai-lun/11.5-shu-jv-ku.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.5-shu-jv-ku.md
@@ -284,11 +284,11 @@ WHERE author IN ('王阳', '刘天洋');
 ### “Where 子句”
 
 ```sql
-...（update或delete)
+...(update或delete)
 where Price < 50;
-...（update或delete)
+...(update或delete)
 WHERE author = '王阳' or author = '刘天洋';
-...（update或delete)
+...(update或delete)
 WHERE name in ('张三', '李四');
 ```
 
